added altitude text to the WPF grid

--- a/ChromiumWPF/MainWindow.xaml
+++ b/ChromiumWPF/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:cefSharp="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
         xmlns:System="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" WindowState="Maximized">
+        Title="MainWindow" Height="450" Width="792" WindowState="Maximized">
 
 
     <!--variable "peerHtmlPath" houlds path to index.html"
@@ -30,7 +30,7 @@
             <ColumnDefinition Width="5*" />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
-        
+
         <Grid Grid.Row="0">
             <Menu Height="30" Margin="10" HorizontalAlignment="Left" Foreground="Black">
                 <MenuItem Header="Action" Width="100" Height="30" Background="Gray">
@@ -57,14 +57,17 @@
                 <Image Source="Images/Refresh.png"/>
             </Button>
         </Grid>
-        
+        <Grid Grid.Row="0" Grid.Column="2" HorizontalAlignment="Left">
+            <TextBlock x:Name="altTextBlock" FontSize="22" Text="Altitude: 9999" Foreground="White" VerticalAlignment="Center" Height="30" Margin="0,10,-24.8,10.4" HorizontalAlignment="Center"/>
+        </Grid>
+
         <Grid Grid.Row="1" Grid.Column="1">
             <cefSharp:ChromiumWebBrowser
                 Name="defaultBrowser"
                 Address="http://127.0.0.1:5500/index.html"
                 PreviewMouseDown="CesiumClick"/>
         </Grid>
-        
+
         <GroupBox Grid.Row="1" Grid.Column="2">
             <StackPanel x:Name="actionStack" Visibility="Collapsed">
 
@@ -111,7 +114,7 @@
                         <ComboBoxItem>House</ComboBoxItem>
                     </ComboBox>
                 </StackPanel>
-                
+
                 <StackPanel x:Name="circleStack" Visibility="Collapsed">
                     <TextBlock FontSize="15" Foreground="White"><Run Text="Longitude"/></TextBlock>
                     <TextBox x:Name="circlelongitudeTextbox" KeyDown="NextField"/>
@@ -125,14 +128,15 @@
                     <TextBox x:Name="semiMajorAxisTextbox" Tag="LastInStack" KeyDown="NextField"/>
                 </StackPanel>
                 <Button Width="100" Height="50" FontSize="20" Background="Lime" Margin="0, 20" Click="Approve" Content="Approve"/>
-                
+
             </StackPanel>
         </GroupBox>
 
         <Grid Grid.Row="1" Grid.Column="0" Background="White">
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="0*" />       <!-- invisible row for browser00-->
+                <RowDefinition Height="0*" />
+                <!-- invisible row for browser00-->
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="1*" />
@@ -144,7 +148,7 @@
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-                      
+
             <!-- browser00 is used to accept self-signed certificate of signalling server-->
             <Grid Grid.Row="0" Grid.Column="0">
                 <cefSharp:ChromiumWebBrowser Name="browser00" Visibility="Hidden" Address="{StaticResource signallingServerUrl}"/>
