--- a/ChromiumWPF/MainWindow.xaml
+++ b/ChromiumWPF/MainWindow.xaml
@@ -15,7 +15,7 @@
         change values if needed-->
     <Window.Resources>
         <System:String x:Key="peerHtmlPath">file:///C:/msys64/home/ITAMARBI/WPF_Chromium/my-gst-webrtc/js/index.html</System:String>
-        <System:String x:Key="signallingServerUrl">https://192.168.136.138:8443/</System:String>
+        <System:String x:Key="signallingServerUrl">https://192.168.136.144:8443/</System:String>
     </Window.Resources>
 
 
@@ -135,8 +135,7 @@
         <Grid Grid.Row="1" Grid.Column="0" Background="White">
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="0*" />
-                <!-- invisible row for browser00-->
+                <RowDefinition Height="0*" />     <!-- invisible row for browser00-->
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="1*" />
